# rust_server

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  configuration.yaml  makefile
.github/workflows/: audit.yml  general.yml  github-actions.yml
migrations/: 20231231180027_create_subscription_table.sql  20240101215245_change_timestamp_type.sql
scripts/: init_db.sh  post_subscribe.sh
src/: config.rs  configuration.rs  lib.rs  main.rs  startup.rs  telemetry.rs
src/routes/: subscriptions.rs
tests/: integration.rs  integration_health_check.rs
