[package]
name = "rust_server"
version = "0.1.0"
authors = ["Michele Xiloyannis"]
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
name = "rust_server"
path = "src/main.rs"

[dependencies]
actix-web = "4"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }

[dev-dependencies]
reqwest = "0.11"
