[package]
name = "rust_server"
version = "0.1.0"
authors = ["Michele Xiloyannis"]
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
name = "rust_server"
path = "src/main.rs"

[dependencies]
actix-web = "4"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
serde = { version = "1", features = ["derive"] }
config = "0.13"

[dependencies.sqlx]
version = "0.7"
default-features = false
features = [
    "postgres", 
    "runtime-tokio-rustls", 
    "macros",
    "uuid",
    "chrono",
    "migrate"
]

[dev-dependencies]
reqwest = "0.11"
